...
        )
        cardSetDao.insertCardSet(cardSet)

        val card = Card(
            cardId = 1,
            cardSetId = 1,
            kanjiValue = "日本語",
            kanaValue = "にほんご",
            englishValue = "Japanese",
            difficulty = Difficulty.EASY
        )
        cardDao.insertCards(card)
    }

...
