/*
 *  Copyright (c) 2025 Anthony Gallop <agallopdev@gmail.com>
 *
 *  This program is free software; you can redistribute it and/or modify it under
 *  the terms of the GNU General Public License as published by the Free Software
 *  Foundation; either version 3 of the License, or (at your option) any later
 *  version.
 *
 *  This program is distributed in the hope that it will be useful, but WITHOUT ANY
 *  WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
 *  PARTICULAR PURPOSE. See the GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License along with
 *  this program.  If not, see <http://www.gnu.org/licenses/>.
 */
package org.ransomsensei.activity_lockscreen

import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.assertIsNotDisplayed
import androidx.compose.ui.test.assertTextEquals
import androidx.compose.ui.test.isDisplayed
import androidx.compose.ui.test.isNotDisplayed
import androidx.compose.ui.test.junit4.createAndroidComposeRule
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performTextInput
import org.junit.Before
import org.junit.Rule
import org.junit.Test

/** Compose Ui test for [HomeActivity] */
class HomeScreenActivityTest {
    @get:Rule
    val composeTestRule = createAndroidComposeRule<HomeActivity>()

    @Before
    fun waitForAnimation() {
        composeTestRule.waitUntil(timeoutMillis = 5000L) {
            composeTestRule.onNodeWithTag("AnimatedVisibility").isDisplayed()
        }
    }

    @Test
    fun initialState() {
        composeTestRule.onNodeWithText("日本語").assertIsDisplayed()
        composeTestRule.onNodeWithText("にほんご").assertIsDisplayed()
        composeTestRule.onNodeWithText("Check my answer").assertIsDisplayed()
        composeTestRule.onNodeWithTag("AnswerTextField").assertTextEquals("")
        composeTestRule.onNodeWithText("Skip for now").isNotDisplayed()
    }

    @Test
    fun inputWrongAnswer() {
        composeTestRule.onNodeWithTag("AnswerTextField").performTextInput("English")
        composeTestRule.onNodeWithText("Check my answer").performClick()

        composeTestRule.onNodeWithText("日本語").assertIsDisplayed()
        composeTestRule.onNodeWithText("にほんご").assertIsDisplayed()
        composeTestRule.onNodeWithText("Check my answer").assertIsDisplayed()
    }

    @Test
    fun inputCorrectAnswer() {
        composeTestRule.onNodeWithTag("AnswerTextField").performTextInput("Japanese")
        composeTestRule.onNodeWithText("Check my answer").performClick()

        composeTestRule.onNodeWithText("日本語").assertIsNotDisplayed()
        composeTestRule.onNodeWithText("にほんご").assertIsNotDisplayed()
        composeTestRule.onNodeWithText("Check my answer").assertIsNotDisplayed()
    }

    @Test
    fun skip() {
        composeTestRule.waitUntil(timeoutMillis = 6000L) {
            composeTestRule.onNodeWithText("Skip for now").isDisplayed()
        }
        composeTestRule.onNodeWithText("Skip for now").performClick()

        composeTestRule.onNodeWithText("日本語").assertIsNotDisplayed()
        composeTestRule.onNodeWithText("にほんご").assertIsNotDisplayed()
        composeTestRule.onNodeWithText("Check my answer").assertIsNotDisplayed()
    }
}